# transfer-window

./: .Cargo.toml.un~  .gitignore  Cargo.toml  Cargo.toml~  README.md  burn.rs  dhat.out.13217  plan.md  profile.json  rustfmt.toml  todo.md
controller/: Cargo.toml
controller/src/: completed_levels.rs  event_handler.rs  main.rs
model/: Cargo.toml
model/resources/prediction-test-cases/collision-with-moon/: encounters.json  objects.json
model/resources/prediction-test-cases/encounter-with-earth/: encounters.json
model/resources/prediction-test-cases/encounter-with-earth-and-moon/: encounters.json
model/resources/prediction-test-cases/escape-from-earth/: encounters.json  objects.json
model/resources/prediction-test-cases/escape-from-moon-1/: encounters.json  objects.json
model/resources/prediction-test-cases/escape-from-moon-2/: encounters.json
model/resources/prediction-test-cases/hyperbolic-moon-encounter-1/: encounters.json
model/resources/prediction-test-cases/hyperbolic-moon-encounter-2/: encounters.json  objects.json
model/resources/prediction-test-cases/hyperbolic-moon-encounter-3/: encounters.json
model/resources/prediction-test-cases/hyperbolic-moon-encounter-4/: encounters.json  objects.json
model/resources/prediction-test-cases/hyperbolic-moon-encounter-5/: encounters.json  objects.json
model/resources/prediction-test-cases/insanity-1/: encounters.json  objects.json
model/resources/prediction-test-cases/insanity-2/: encounters.json
model/resources/prediction-test-cases/insanity-3/: encounters.json  objects.json
model/resources/prediction-test-cases/many-moon-encounters/: encounters.json
model/resources/prediction-test-cases/moon-slingshot-to-escape-earth/: encounters.json  objects.json
model/resources/prediction-test-cases/parallel-with-moon/: objects.json
model/resources/prediction-test-cases/two-moons-varied-encounters-1/: encounters.json
model/resources/prediction-test-cases/two-moons-varied-encounters-2/: encounters.json
model/resources/prediction-test-cases/two-moons-varied-encounters-3/: encounters.json  objects.json
model/src/: api.rs  components.rs  debug.rs  lib.rs  model.rs  model_query.rs  model_snapshot.rs  storage.rs  story_event.rs  systems.rs  test_util.rs  util.rs
model/src/api/: builder.rs  burn.rs  burns.rs  closest_approach.rs  closest_point.rs  components.rs  docking.rs  encounters.rs  explosion.rs  guidance.rs  intel.rs  quantities.rs  queries.rs  segments.rs  slots.rs  time.rs  timeline.rs  torpedo.rs  trajectories.rs  trajectory_prediction.rs  vessels.rs
model/src/api/trajectories/: encounter.rs  fast_solver.rs  test_cases.rs
model/src/components/: atmosphere_component.rs  mass_component.rs  name_component.rs  orbitable_component.rs  path_component.rs  stationary_component.rs  trajectory_component.rs  vessel_component.rs
model/src/model/: builder.rs  closest_approach.rs  closest_point.rs  component.rs  components.rs  docking.rs  encounters.rs  explosion.rs  guidance.rs  segment.rs  snapshot.rs  state_query.rs  story_event.rs  time.rs  timeline.rs  trajectories.rs  turn.rs
model/src/modules/: trajectory_prediction.rs
model/src/storage/: component_storage.rs  entity_allocator.rs  entity_builder.rs
model/src/systems/: fuel_depletion.rs  time.rs  trajectory_prediction.rs  trajectory_update.rs  update_fuel.rs  update_guidance.rs  update_launcher_cooldown.rs  update_objects.rs  update_stations.rs  update_target.rs  update_time.rs  update_timeline.rs  update_torpedo_guidance.rs  update_trajectory.rs  update_warp.rs  warp_update_system.rs
model/tests/: burns.rs  prediction.rs  quantities.rs  time.rs  torpedo_guidance.rs  turn.rs  warp.rs
view/: Cargo.toml  build.rs
view/resources/: cache.json  crop_all_textures_to_square.sh
view/resources/drawio/: .$engine-efficient.drawio.bkp  .$torpedo-storage-2.drawio.bkp  engine-efficient.drawio  fuel-tank-3.drawio  fuel-tank-4.drawio  scout-2.drawio  torpedo-storage-1.drawio
view/resources/final_textures/: .$01-title.png.bkp  .$01-welcome-complete.png.bkp  .$01-welcome.png.bkp  .$02-orbits.png.bkp  .$1-01-complete.png.bkp  .$1-01.png.bkp  .$1-02-complete.png.bkp  .$1-02.png.bkp  .$1-03-complete.png.bkp  .$1-03.png.bkp  .$1-04-complete.png.bkp  .$Scout I.png.bkp  .$frigate-1.png.bkp  .$frigate-2.png.bkp  .$jake.character.png.bkp  .$jake.png.bkp  .$scout-1.png.bkp  .$scout-2.png.bkp  .$station.png.bkp  .$testship.png.bkp  .$title-1.png.bkp  .$title.png.bkp
view/resources/shaders/: atmosphere.frag  atmosphere.vert  bloom.frag  celestial_object.frag  celestial_object.vert  explosion.frag  icon.frag  icon.vert  planet.frag  planet.vert  screen.frag  screen.vert  screen_texture.frag  screen_texture.vert
view/resources/ship_textures_old/: scout-1.drawio
view/resources/systems_old/: .$antenna-1.drawio.bkp  .$engine-booster.drawio.bkp  .$engine-regular.drawio.bkp  .$fuel-tank-3.drawio.bkp  .$fuel-tank-4.drawio.bkp  .$radar-active.drawio.bkp  .$relay-2.drawio.bkp  .$silhouette-fuel-tank.drawio.bkp  .$silhouette-torpedo-launcher.drawio.bkp  .$torpedo-storage-1.drawio.bkp  .$torpedo-storage-2.drawio.bkp  fission-reactor.drawio  fuel-tank-2.drawio  fuel-tank-4.drawio  silhouette-battery.drawio  silhouette-engine.drawio  silhouette-fuel-tank.drawio  silhouette-torpedo-storage.drawio  torpedo-launcher-2.drawio
view/resources/textures/menu/: 1-01.drawio  (+24 more)
view/src/: controller_events.rs  events.rs  game.rs  icons.rs  icons2  icons3  icons4  icons5  icons6  icons7  lib.rs  menu.rs  rendering.rs  resources.rs  styles.rs
view/src/game/: animation.rs  camera.rs  debug.rs  events.rs  expiry.rs  frame_history.rs  input.rs  misc.rs  overlay.rs  renderers.rs  rendering.rs  resources.rs  selected.rs  storyteller.rs  underlay.rs  util.rs
view/src/rendering/: color_buffer_multisample.rs  color_buffer_normal.rs  color_buffer_texture.rs  explosion_renderer.rs  framebuffer.rs  geometry_renderer.rs  intermediate_renderer.rs  render_pipeline.rs  screen_renderer.rs  screen_texture_renderer.rs  shader_program.rs  texture.rs  texture_renderer.rs  util.rs  vertex_array_object.rs
(+556 files in other folders)
