[package]
name = "transfer-window"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
nalgebra-glm = "0.18.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level=0
debug=2
incremental=true

[profile.bench]
opt-level=3
debug=2
incremental=true

[profile.release]
opt-level=3
debug=0
incremental=true