[package]
name = "transfer-window"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
nalgebra-glm = "0.18.0"
kurbo = "0.11.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
tracy-client = {version = "0.17.0", optional = true }
tracing-tracy = {version = "0.11.0", optional = true }

[profile.dev]
opt-level=0
debug=2
incremental=true

[profile.bench]
opt-level=3
debug=2
incremental=true

[profile.release]
opt-level=3
debug=0
incremental=true

[features]
profiling = ["dep:tracy-client", "dep:tracing-tracy"]