[package]
name = "transfer-window-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
transfer-window-model = { path = "../model" }
transfer-window-view = { path = "../view" }
nalgebra-glm = "0.19.0"
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"] }
tracy-client = { version = "0.17.0", optional = true }
tracing-tracy = { version = "0.11.0", optional = true }
eframe = { version = "0.28.1", features = ["glow"] }
egui_extras = { version = "0.28.1", features = ["image", "file"] }
sysinfo = "0.30.12"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"

[features]
profiling = ["dep:tracy-client", "dep:tracing-tracy"]

[lints]
workspace = true