[package]
name = "transfer-window-model"
version = "0.1.0"
edition = "2021"

[dependencies]
transfer-window-common = { path = "../common" }
rust-kepler-solver = "0.1.0"
log = "0.4.21"
lazy_static = "1.4.0"
nalgebra-glm = { version = "0.18.0", features = ["serde-serialize"] }
roots = "0.0.8"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
tracy-client = { version = "0.17.0", optional = true }
tracing-tracy = { version = "0.11.0", optional = true }

[features]
profiling = ["dep:tracy-client", "dep:tracing-tracy"]

[lints]
workspace = true