[package]
name = "transfer-window-model"
version = "0.1.0"
edition = "2021"

[dependencies]
ecolor = { version = "0.28.1", features = ["serde"] }
transfer-window-common = { path = "../common" }
rust-kepler-solver = "0.1.0"
log = "0.4.21"
lazy_static = "1.4.0"
nalgebra-glm = { version = "0.19.0", features = ["serde-serialize"] }
roots = "0.0.8"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
tracy-client = { version = "0.17.0", optional = true }

[features]
profiling = ["dep:tracy-client"]

[lints]
workspace = true
