[package]
name = "transfer-window-view"
version = "0.1.0"
edition = "2021"

[dependencies]
transfer-window-model = { path = "../model" }
transfer-window-common = { path = "../common" }
log = "0.4.21"
nalgebra-glm = "0.18.0"
eframe = { version = "0.23", features = ["glow"] }
image = { version = "0.25", features = ["jpeg", "png"] }
tracy-client = { version = "0.17.0", optional = true }
egui_extras = { version = "0.23", features = ["image", "file"] }

[features]
profiling = ["dep:tracy-client"]

[lints]
workspace = true