[package]
name = "transfer-window-view"
version = "0.1.0"
edition = "2021"

[dependencies]
transfer-window-common = { path = "../common" }
transfer-window-model = { path = "../model" }
log = "0.4.21"
nalgebra-glm = "0.19.0"
eframe = { version = "0.28.1", features = ["glow"] }
image = { version = "0.25", features = ["jpeg", "png"] }
tracy-client = { version = "0.17.0", optional = true }
egui_extras = { version = "0.28.1", features = ["image", "file"] }
thousands = "0.2.0"
itertools = "0.13.0"

[build-dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.5.0"

[features]
profiling = ["dep:tracy-client"]

[lints]
workspace = true
